--- a/client/html/index.html
+++ b/client/html/index.html
@@ -1,99 +1,106 @@
 <!doctype html>
 <html class="no-js" lang="en" ng-app="tbsWwwAngular">
-  <head>
-    <meta charset="utf-8">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>tbs www</title>
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+<head>
+  <meta charset="utf-8">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>tbs www</title>
+  <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
-    <!-- build:css(client) styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css" />
-    <!-- endbower -->
-    <!-- endbuild -->
+  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
+  <!-- build:css(client/html) styles/vendor.css -->
+  <!-- bower:css -->
+  <link rel="stylesheet" href="../bower_components/angular-material/angular-material.css"/>
+  <!-- endbower -->
+  <!-- endbuild -->
 
-    <!-- build:css(deployDev) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
+  <!-- build:css(deployDev) styles/main.css -->
+  <link rel="stylesheet" href="styles/main.css">
+  <!-- endbuild -->
 
-    <!-- build:js(client) scripts/vendor/modernizr.js -->
-    <!--script src="/bower_components/modernizr/modernizr.js"></script-->
-    <!-- endbuild -->
-  </head>
-  <body layout="row" ng-controller="UserController as ul">
-    <!--[if lt IE 10]>
-      <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-    <md-sidenav class="site-sidenav md-sidenav-left md-whiteframe-z2"
-                md-component-id="left"
-                md-is-locked-open="$mdMedia('gt-sm')">
-
-      <md-toolbar class="md-whiteframe-z1">
-        <h1>Users</h1>
-      </md-toolbar>
-
-      <md-list>
-        <md-list-item ng-repeat="it in ul.users">
-          <md-button ng-click="ul.selectUser(it)" ng-class="{'selected' : it === ul.selected }">
-            <md-icon md-svg-icon="{{it.avatar}}" class="avatar"></md-icon>
-            {{it.name}}
-          </md-button>
-        </md-list-item>
-      </md-list>
-
-    </md-sidenav>
-
-
-    <div flex layout="column" tabIndex="-1" role="main" class="md-whiteframe-z2">
-
-      <md-toolbar layout="row" class="md-whiteframe-z1">
-        <md-button class="menu" hide-gt-sm ng-click="ul.toggleList()" aria-label="Show User List">
-          <md-icon md-svg-icon="menu" ></md-icon>
-        </md-button>
-        <h1>Angular Material - Starter App</h1>
-      </md-toolbar>
-
-      <md-content flex id="content">
-        <md-icon md-svg-icon="{{ul.selected.avatar}}" class="avatar"></md-icon>
-        <h2>{{ul.selected.name}}</h2>
-        <p>{{ul.selected.content}}</p>
-
-        <md-button class="contact" md-no-ink ng-click="ul.showContactOptions($event)" aria-label="Contact User">
-          <md-tooltip>Contact {{ ul.selected.name }}</md-tooltip>
-          <md-icon md-svg-icon="share"></md-icon>
-        </md-button>
+  <!-- build:js(client) scripts/vendor/modernizr.js -->
+  <script src="/bower_components/modernizr/modernizr.js"></script>
+  <!-- endbuild -->
+</head>
+<body>
+<!--[if lt IE 10]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+  your browser</a> to improve your experience.</p>
+<![endif]-->
+<div class="buttondemoBasicUsage ng-cloak">
+  <div>
+    <div>
+      <md-content>
+        <section layout="row" layout-sm="column" layout-align="center center">
+          <md-button>title1</md-button>
+          <md-button md-no-ink class="md-primary">Primary (md-noink)</md-button>
+          <md-button ng-disabled="true" class="md-primary">Disabled</md-button>
+          <md-button class="md-warn">title4</md-button>
+          <div class="label">Flat</div>
+        </section>
+        <section layout="row" layout-sm="column" layout-align="center center">
+          <md-button class="md-raised">Button</md-button>
+          <md-button class="md-raised md-primary">Primary</md-button>
+          <md-button ng-disabled="true" class="md-raised md-primary">Disabled</md-button>
+          <md-button class="md-raised md-warn">Warn</md-button>
+          <div class="label">Raised</div>
+        </section>
       </md-content>
-
     </div>
+  </div>
+</div>
+<!--md-sidenav-- class="site-sidenav md-sidenav-left md-whiteframe-z2"
+            md-component-id="left"
+            md-is-locked-open="$mdMedia('gt-sm')">
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
+  <md-toolbar class="md-whiteframe-z1">
+    <h1>Users</h1>
+  </md-toolbar>
+  <md-list>
+    <md-list-item ng-repeat="it in ul.users">
+      <md-button ng-click="ul.selectUser(it)" ng-class="{'selected' : it === ul.selected }">
+        <md-icon md-svg-icon="{{it.avatar}}" class="avatar"></md-icon>
+        {{it.name}}  aa
+      </md-button>
+    </md-list-item>
+  </md-list>
 
-    <!-- build:js(client) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="../bower_components/modernizr/modernizr.js"></script>
-    <script src="../bower_components/angular/angular.js"></script>
-    <script src="../bower_components/angular-animate/angular-animate.js"></script>
-    <script src="../bower_components/angular-aria/angular-aria.js"></script>
-    <script src="../bower_components/angular-material/angular-material.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
+</md-sidenav-->
 
-        <!-- build:js(client) scripts/plugins.js -->
-        <!-- endbuild -->
 
-        <!-- build:js(deployDev) scripts/main.js -->
-        <script src="scripts/main.js"></script>
-        <!-- endbuild -->
+<!--div flex layout="column" tabIndex="-1" role="main" class="md-whiteframe-z2">
+
+  <md-toolbar layout="row" class="md-whiteframe-z1">
+    <md-button class="menu" hide-gt-sm ng-click="ul.toggleList()" aria-label="Show User List">
+      <md-icon md-svg-icon="menu" ></md-icon>
+    </md-button>
+    <h1>Angular Material - Starter App</h1>
+  </md-toolbar>
+
+  <md-content flex id="content">
+    <md-icon md-svg-icon="{{ul.selected.avatar}}" class="avatar"></md-icon>
+    <h2>{{ul.selected.name}}</h2>
+    <p>{{ul.selected.content}}</p>
+
+    <md-button class="contact" md-no-ink ng-click="ul.showContactOptions($event)" aria-label="Contact User">
+      <md-tooltip>Contact {{ ul.selected.name }}</md-tooltip>
+      <md-icon md-svg-icon="share"></md-icon>
+    </md-button>
+  </md-content>
+
+</div-->
+
+<!-- build:js(client/html) scripts/vendor.js -->
+<!-- bower:js -->
+<script src="../bower_components/modernizr/modernizr.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
+
+<!-- build:js(client) scripts/plugins.js -->
+<!-- endbuild -->
+
+<!-- build:js(deployDev) scripts/main.js -->
+<script src="scripts/main.js"></script>
+<!-- endbuild -->
 </body>
 </html>
